# romnet

./: .flake8  .gitignore  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-package-conda.yml  python-package-pip.yml  python-pip.yml  run-tests-pip.yml  run-tests.yml
cluster/: job.slurm  run_jobs.sh
doc/source/: conf.py  index.rst
examples/: Lorenz.py  barkley.py  cgl.py  demo.py  initial_condition_0.75_0.01.txt  ks.py  noack.py  ode.py  pitchfork.py  slow_subspace.py  train.py
notes/: cluster.ipynb  cobras.tex  ks.tex
results/noack/: training_log.text
results/noack/GAP_loss/: noack.romnet  noack_initial.romnet  noack_rom.traj
scripts/: demo.py  noack.py
src/romnet/: __init__.py  autoencoder.py  model.py  sample.py  timestepper.py  train.py  typing.py
src/romnet/models/: __init__.py  barkley.py  cgl.py  ks.py  noack.py  pitchfork.py
tests/: test_autoencoder.py  test_model.py  test_sample.py
