[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "romnet"
version = "0.0.1"
authors = [
  { name="Clancy Rowley", email="cwrowley@princeton.edu" }
]
description = "Reduced order models using neural networks"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    ]
